# translation_game

./: .gitignore  CNAME  LICENSE  README.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.js
.github/workflows/: web.yml
assets/: index-B5JxjpWV.js  index-Bf_MHGGA.js  index-CMZw2Oa_.css  index-Ccc9earw.js  index-CuMeLuaP.css  index-D9kbK6xv.css  index-DY3D_djC.js  index-Df-XC__-.js  index-DicVAHu2.js  index-FeKi3U_E.js  index-QYjXg75O.js
src/: App.jsx  main.jsx
src/assets/: assets.js
src/components/Main/: Game.jsx  Landing.jsx  Login.jsx  Main.css
src/config/: gemini.js
src/context/: Context.jsx
translation_game/: gemini.py  main.py
translation_game/assets/: index-DXi7qDCm.js
